Fixed nav flicker

--- a/Week-04/css/main.css
+++ b/Week-04/css/main.css
@@ -3,7 +3,6 @@
   DEFAULT STYLES ----------------------------------------
 
 /////////////////////////////////////////////////////// */
-
 body {
     font-family: 'Public Sans', sans-serif;
     font-weight: 400;
@@ -35,13 +34,13 @@ header {
     background-color: #FFFFFF;
     text-decoration: none;
     text-transform: uppercase;
-    -webkit-transition: border-color 0.3s ease-out;
-    transition: border-color 0.3s ease-out;
 }
 
 .nav-main>a:hover, .nav-main>a:focus {
     color: rgb(173,133,13);
     border: 1px solid rgb(173,133,13);
+    -webkit-transition: 0.2s ease-in;
+    transition: 0.2s ease-in;
 }
 
 .nav-main>a:active {
